feature/primerVersion - Mod: header and footer - images for the main index

--- a/Frontend/pages/footer.html
+++ b/Frontend/pages/footer.html
@@ -1,31 +1,29 @@
         <footer>
-            <div class="container">
-                <h3>INFORMES E INSCRIPCIÓN</h3>
-                <div>
+            <div class="row justify-content-around">
+                <h3 class="p-3"><img src="./Frontend/assets/img/recurso-pie.png" alt="">INFORMES E INSCRIPCIÓN</h3>
+                <div class="col-md-3">
                     <h4>Sede Reconquista</h4>
                     <p>Reconquista 439 PB. C1003ABI - CABA.</p>
                     <p>Tel./Fax: (5411) 4311-4785/7.</p>
                     <p>Email: cristian.fernandez@ymca.org.ar</p>
                     <p>LA YMCA</p>
                 </div>
-                <div>
+                <div class="col-md-3">
                     <h4>Sede Parque</h4>
                     <p>Av. Lafuente 2480 - CABA</p>
                     <p> WS.:54911 30175357</p>
                     <p>Email: cristian.fernandez@ymca.org.ar</p>
                 </div>
-                <div>
+                <div class="col-md-3">
                     <h4>ACJ de Rosario</h4>
                     <p>Catamarca 1247 - Rosario</p>
                     <p>Tel.Fax: (540341) 421-4811</p>
                     <p>Email: ymcarosario@arnetbiz.com.ar</p>
                 </div>
-                <div>
-                    <h5>© Copyright 2024 - Asociación Cristiana de Jóvenes - todos los derechos reservados</h5>
-                </div>
             </div>
+            <h5 class="w-100 text-center copy m-0 p-3">© Copyright 2024 - Asociación Cristiana de Jóvenes - todos los derechos reservados</h5>
         </footer>
     </body>
-    <script src="../js/main.js"></script>
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="./Frontend/js/bootstrap.bundle.min.js"></script>
+    <script src="./Frontend/js/main.js"></script>
 </html>
