--- a/Frontend/pages/header.html
+++ b/Frontend/pages/header.html
@@ -6,42 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="'.BASE_URL.'">
     <title>24 horas de YMCA</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="./Frontend/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./Frontend/css/styles.css">
 </head>
 <body>
     <header>
-        <a href="home">Este es el logo<img src="" alt="Logo de las 24 horas de la YMCA"></a>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="d-flex justify-content-center fondo-header p-2">
+            <a href="home" id="logo"><img src="./Frontend/assets/img/logo.png" alt="Logo de las 24 horas de la YMCA"></a>
+        </div>
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">INICIO</a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-around">
+                        <li class="nav-item ">
+                            <a class="nav-link active fw-bold ms-5 hvr-bounce-to-top" aria-current="page" href="home">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">ÚLTIMA EDICIÓN</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">ÚLTIMA EDICIÓN</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">EQUIPOS</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">EQUIPOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">RESULTADOS ONLINE</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">RESULTADOS ONLINE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">REGLAMENTO</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">REGLAMENTO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">INSCRIPCIONES</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">INSCRIPCIONES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">CONTACTO</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">CONTACTO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">LOGIN</a>
+                            <a class="nav-link active fw-bold me-5 hvr-bounce-to-top" aria-current="page" href="#">LOGIN</a>
                         </li>
                     </ul>
                 </div>
