feature/primerVersion - pages with footer and header

--- a/Frontend/pages/header.html
+++ b/Frontend/pages/header.html
@@ -25,25 +25,25 @@
                             <a class="nav-link active fw-bold ms-5 hvr-bounce-to-top" aria-current="page" href="home">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">ÚLTIMA EDICIÓN</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="edicion">ÚLTIMA EDICIÓN</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">EQUIPOS</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="equipos">EQUIPOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">RESULTADOS ONLINE</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="resultados">RESULTADOS ONLINE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">REGLAMENTO</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="reglamento">REGLAMENTO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">INSCRIPCIONES</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="inscripciones">INSCRIPCIONES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="#">CONTACTO</a>
+                            <a class="nav-link active fw-bold hvr-bounce-to-top" aria-current="page" href="contacto">CONTACTO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active fw-bold me-5 hvr-bounce-to-top" aria-current="page" href="#">LOGIN</a>
+                            <a class="nav-link active fw-bold me-5 hvr-bounce-to-top" aria-current="page" href="login">LOGIN</a>
                         </li>
                     </ul>
                 </div>
